# SimpleStreamer

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  Defs.h  Helpers.h  Helpers.hpp  Offer.cpp  Offer.h  Packet.cpp  Packet.h
protocol/: CMakeLists.txt  Defs.h  Helpers.h  Helpers.hpp  Offer.h  Packet.cpp
simple_publisher/: CMakeLists.txt  HandshakeClient.cpp  HandshakeClient.h  Publisher.cpp  Publisher.h  main.cpp
simple_server/: CMakeLists.txt  HandshakeServer.cpp  HandshakeServer.h  Server.cpp  Server.h  StreamServer.cpp  StreamServer.h  main.cpp
